Replace the log

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,7 +45,7 @@
     <section class="header">
       <div class="row">
         <div class="four columns">
-          <img class="value-img" width="450px" src="images/logo3.png">
+          <img class="value-img" width="450px" src="images/DenosLab.png">
         </div>
         <div class="six columns" align="left">
         <br/>
