Replace the page icon

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
 
     <!-- Favicon
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <link href="favicon.ico" rel="shortcut icon"/>
+    <link href="/images/DenosLabLabel.png" rel="icon" type="image/png"/>
 
 
   </head>
@@ -137,7 +137,6 @@
       <br/>
       -->
 
-      <p>DENOS Lab would like to thank support from <em>National Science Foundation</em>, <em>National Institutes of Health</em>, and <em>Office of Naval Research</em>, through the following research projects:</p>
 
       <h7 class="docs-header">Active Projects</h7>
       <!--
@@ -184,10 +183,6 @@
       </ul>
       -->
 
-      <p>DENOS Lab would also like to thank
-        <em>Xkool.ai</em>,
-        <em>Didi Chuxing</em> and
-        <em>VeChain Foundation</em> for research gifts, and NVIDIA Corporation for the donation of GPU cards. </p>
     </div>
 
     <div class="docs-section" id="members">
