--- a/css/custom.css
+++ b/css/custom.css
@@ -12,10 +12,10 @@ a:hover {
 .container {
   max-width: 800px; }
 .header {
-  margin-top: 6rem;
+  margin-top: 2rem;
   text-align: center; }
 .value-prop {
-  margin-top: 1rem; }
+  margin-top: 0; }
 .value-props {
   margin-top: 4rem;
   margin-bottom: 4rem; }
@@ -31,7 +31,7 @@ a:hover {
 .value-img {
   display: block;
   text-align: center;
-  margin: 2.5rem auto 0; }
+  margin: 1rem auto 0; }
 .example-grid .column,
 .example-grid .columns {
   background: #EEE;
@@ -183,7 +183,7 @@ img.grayscale:hover {
 /* Larger than phone */
 @media (min-width: 550px) {
   .header {
-    margin-top: 6rem; }
+    margin-top: 3rem; }
   .value-props {
     margin-top: 9rem;
     margin-bottom: 7rem; }
