Update layout and content

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -344,7 +344,7 @@
         </li>
 
         <li><i>Shoreline: Data-Driven Threshold Estimation of the Online Reserves of Cryptocurrency Trading Platforms. </i><br>
-            Xitong Zhang, He Zhu, and Jiayu Zhou. <br>
+            Xitong Zhang, Steve Drew, and Jiayu Zhou. <br>
             <b>AAAI</b> 2020. <a href="https://ojs.aaai.org/index.php/AAAI/article/view/5472" target="_blank">[paper]</a>
         </li>
 
@@ -407,7 +407,7 @@
         </li>
 
         <li><i>Distributed Data Vending on Blockchain. </i><br>
-            Jiayu Zhou, Fengyi Tang, He Zhu, Ning Nan, and Ziheng Zhou. <br>
+            Jiayu Zhou, Fengyi Tang, Steve Drew, Ning Nan, and Ziheng Zhou. <br>
             <b>IEEE Blockchain</b> 2018 <a href="https://arxiv.org/abs/1803.05871" target="_blank">[arXiv]</a>
         </li>
 
@@ -448,7 +448,7 @@
         </li>
 
         <li><i>EdgeChain: Blockchain-based Multi-vendor Mobile Edge Application Placement. </i><br>
-            He Zhu, Changcheng Huang, and Jiayu Zhou. <br>
+            Steve Drew, Changcheng Huang, and Jiayu Zhou. <br>
             Accepted by NetSoft 2018 <a href="https://arxiv.org/abs/1801.04035" target="_blank">[arXiv]</a>
         </li>
 
