--- a/css/custom.css
+++ b/css/custom.css
@@ -12,7 +12,7 @@ a:hover {
 .container {
   max-width: 800px; }
 .header {
-  margin-top: 2rem;
+  margin-top: 0;
   text-align: center; }
 .value-prop {
   margin-top: 0; }
@@ -31,7 +31,7 @@ a:hover {
 .value-img {
   display: block;
   text-align: center;
-  margin: 1rem auto 0; }
+  margin: 0 auto; }
 .example-grid .column,
 .example-grid .columns {
   background: #EEE;
@@ -183,7 +183,7 @@ img.grayscale:hover {
 /* Larger than phone */
 @media (min-width: 550px) {
   .header {
-    margin-top: 3rem; }
+    margin-top: 0; }
   .value-props {
     margin-top: 9rem;
     margin-bottom: 7rem; }
