Add calendar section to layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -58,6 +58,7 @@
           <li class="navbar-item"><a class="navbar-link" href="#research">Research</a></li>
           <li class="navbar-item"><a class="navbar-link" href="#members">Members</a></li>
           <li class="navbar-item"><a class="navbar-link" href="#publication">Publication</a></li>
+          <li class="navbar-item"><a class="navbar-link" href="#calendar">Calendar</a></li>
           <li class="navbar-item"><a class="navbar-link" href="https://github.com/DENOSlab/" target="_blank"><font color="#173d74">Software</font></a></li>
           <li class="navbar-item">
             <a class="navbar-link" href="#" data-popover="#moreNavPopover">Links</a>
@@ -659,6 +660,11 @@
       </ul>
       -->
 
+    </div>
+
+    <div class="docs-section" id="calendar">
+      <h6 class="docs-header">Calendar</h6>
+      {% include calendar.html %}
     </div>
 
     <div align="center">
